# Keel-1

./: .gitignore  CLAUDE.md  DESIGN.md  KNOWN_ISSUES.md  README.md  main.py  pyproject.toml  test_coordinator.py  test_profilers.py
agent-alignment-checker/: ARCHITECTURE.md  GUIDE.md  README.md  ROUTING.md  agent.py
agent-antipatterns/: ARCHITECTURE.md  GUIDE.md  README.md  ROUTING.md  agent.py
agent-constraints/: ARCHITECTURE.md  GUIDE.md  README.md  ROUTING.md  agent.py
agent-constraints/reference/: constraints.md
agent-engine-profiler/: ABOUT.md  ARCHITECTURE.md  CONTRACT.md  GUIDE.md  README.md  ROUTING.md  agent.py
agent-gap-analyzer/: ARCHITECTURE.md  GUIDE.md  README.md  ROUTING.md  agent.py
agent-harness-logger/: ABOUT.md  ARCHITECTURE.md  CONTRACT.md  README.md  ROUTING.md  agent.py
agent-human-logger/: ABOUT.md  ARCHITECTURE.md  CONTRACT.md  README.md  ROUTING.md  agent.py
agent-human-profiler/: ABOUT.md  ARCHITECTURE.md  CONTRACT.md  GUIDE.md  README.md  ROUTING.md  agent.py
agent-identity/: ARCHITECTURE.md  GUIDE.md  README.md  ROUTING.md  agent.py
agent-logger/: agent.py
agent-quality/: ABOUT.md  CONTRACT.md  README.md  ROUTING.md
agent-quality-checker/: ARCHITECTURE.md  GUIDE.md  README.md  ROUTING.md  agent.py
agent-question-generator/: ABOUT.md  ARCHITECTURE.md  CONTRACT.md  GUIDE.md  README.md  ROUTING.md  agent.py
agent-thinking-logger/: ABOUT.md  ARCHITECTURE.md  CONTRACT.md  README.md  ROUTING.md  agent.py
agent-verifier/: agent.py
agent-voice/: ABOUT.md  CONTRACT.md  README.md  ROUTING.md
agent-voice-checker/: ARCHITECTURE.md  GUIDE.md  README.md  ROUTING.md  agent.py
backend/: harness.py
build-notes/: constraints-agent.md
coordinator/: .env.example  ABOUT.md  ADD_TEST_CASE.md  ARCHITECTURE.md  CMakeLists.txt  CONTRACT.md  ENDPOINT_REQUESTS.md  ENDPOINT_RESPONSES.md  README.md  ROUTING.md  agent.py  agents_direct.py  band_bridge.py  build_and_exec.sh  build_run_mock_server.sh  catch-log.md  main.cpp  mock_server.cpp  run_chain.py  setup_session.py  types.hpp
demo/: README.md
feedback-loop/: ABOUT.md  CONTRACT.md  ROUTING.md
feedback-loop/reference/: pattern-threshold.md
frontend/: index.html  shader-web-background.js
shared/: mentions.py  schema.json  usage.py
website/: index.html  package-lock.json  package.json  server.js
website/public/: index.html  manifest.json
